--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 NODE_ENV="development"
-VITE_BASE_API="https://eipistar.us.kg"
-VITE_WS_URL="wss://eipistar.us.kg/ws"
+VITE_BASE_API="https://eipistar.dpdns.org"
+VITE_WS_URL="wss://eipistar.dpdns.org/ws"
