--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "json-bigint": "^1.0.0",
     "lightweight-charts": "^4.1.3",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.4.21",
